<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                style="@style/TeamIcons"
                android:src="@drawable/cavaliers_icon" />

            <TextView
                style="@style/TeamText"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreText"
                android:text="@string/score_a" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="tripleScoreA"
                android:text="@string/triple_shot" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="doubleScoreA"
                android:text="@string/double_shot" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="freeScoreA"
                android:text="@string/free_shot" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                style="@style/TeamIcons"
                android:src="@drawable/thunder_icon" />

            <TextView
                style="@style/TeamText"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreText"
                android:text="@string/score_b" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="tripleScoreB"
                android:text="@string/triple_shot" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="doubleScoreB"
                android:text="@string/double_shot" />

            <Button
                style="@style/ScoreButtons"
                android:onClick="freeScoreB"
                android:text="@string/free_shot" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>